--- a/stylefile.css
+++ b/stylefile.css
@@ -50,6 +50,7 @@ p, li {
 
 header {
   margin-bottom: 10px;
+  font-family: 'Cinzel Decorative', cursive;
   display: flex;
   flex-flow: row wrap;
 }
@@ -137,4 +138,49 @@ aside a {
 
 footer {
   margin-top: 10px;
+}
+[href="mailto:jburton8686@hotmail.com"] {
+  font-size: 18px;
+}
+/* These styles will style our link
+   in all states */
+[href="#"] {
+  color: blue;
+  font-weight: bold;
+}
+
+/* We want visited links to be the same color
+   as non visited links */
+[href="#"] :visited {
+  color: blue;
+}
+
+/* We highlight the link when it is
+   hovered (mouse), activated
+   or focused (keyboard) */
+   [href="#"]:hover,
+   [href="#"]:active,
+   [href="#"]:focus {
+  color: black;
+  text-decoration: none;
+}
+[href="mailto:jburton8686@hotmail.com"] {
+  color: blue;
+  font-weight: bold;
+}
+
+/* We want visited links to be the same color
+   as non visited links */
+   [href="mailto:jburton8686@hotmail.com"] :visited {
+  color: blue;
+}
+
+/* We highlight the link when it is
+   hovered (mouse), activated
+   or focused (keyboard) */
+   [href="mailto:jburton8686@hotmail.com"]:hover,
+   [href="mailto:jburton8686@hotmail.com"]:active,
+   [href="mailto:jburton8686@hotmail.com"]:focus {
+  color: black;
+  text-decoration: none;
 }
