--- a/stylefile.css
+++ b/stylefile.css
@@ -27,7 +27,8 @@ p, input, li {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 5rem;
+  margin-top: 55px;
   text-align: center;
   text-shadow: 2px 2px 10px black;
 }
@@ -72,8 +73,10 @@ h1 {
 
 header img {
   display: block;
-  height: 60px;
+  height: 3%;
   padding-top: 20.15px;
+  max-width: 13%;
+  
 }
 
 nav {
