--- a/stylefile.css
+++ b/stylefile.css
@@ -128,15 +128,15 @@ article {
 }
 
 aside {
-  flex: 1;
-  margin-left: 10px;
-  padding: 1%;
+  flex: 2.5;
+  margin-left: 7px;
+  padding: 1.5%;
 }
 
 aside a {
   display: block;
-  float: left;
-  width: 50%;
+  float: center;
+  width: 60%;
 }
 
 footer {
