--- a/stylefile.css
+++ b/stylefile.css
@@ -117,6 +117,7 @@ img {
   border-radius: 8px;
   display: block;
   padding: 1%;
+  margin-top: 13px;
     margin-left: auto;
     margin-right: auto;
     width: 98%;
