--- a/stylefile.css
+++ b/stylefile.css
@@ -17,12 +17,12 @@ body {
 /* || typography */
 
 h1, h2, h3 {
-  font-family: 'Cinzel Decorative', cursive;
+  font-family: 'Cinzel Decorative', cursive, Arial;
   color: #2a2a2a;
 }
 
 p, input, li {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif, Arial;
   color: #2a2a2a;
 }
 
