added profile pic

--- a/stylefile.css
+++ b/stylefile.css
@@ -59,12 +59,12 @@ header {
 }
 
 body > * {
-  background-color: whitesmoke;
+  background-color: white;
   padding: 1%;
 }
 
 main, header, nav, article, aside, footer, section {
-  background-color: whitesmoke;
+  background-color: white;
   padding: 1%;
 }
 
